[tool.poetry]
name = "pybreak"
version = "0.1.0"
description = "pybreak"
authors = ["Darren Burns <darren.burns@fanduel.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
prompt-toolkit = "^3.0"
dataclasses = { version = "^0.7", python = "3.6" }

[tool.poetry.dev-dependencies]
ward = "^0.33.2b0"

[tool.poetry.scripts]
pybreak = 'pybreak.run:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
